--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,28 @@
   --secondary-color-fon: #2f303a;
 }
 
+/* reset */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  cursor: pointer;
+}
+
+/* тело */
+
 body {
   background-color: var(--white-color);
   font-family: Roboto, sans-serif;
@@ -25,6 +47,17 @@ body {
   letter-spacing: 0.03em;
   font-size: 14px;
 }
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: 1px solid tomato;
+}
+
+/* header */
 
 /* Logo */
 
