--- a/css/styles.css
+++ b/css/styles.css
@@ -29,13 +29,14 @@ h6 {
   margin: 0;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-}
-
 button {
   cursor: pointer;
+}
+
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* тело */
@@ -48,16 +49,25 @@ body {
   font-size: 14px;
 }
 
+/* header */
+
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid tomato;
 }
 
-/* header */
+.cont-header,
+.nav {
+  display: flex;
+  align-items: center;
+}
 
 /* Logo */
 
@@ -76,8 +86,25 @@ body {
 
 /* Site nav */
 
-.list {
-  list-style: none;
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+
+.site-nav .item + .item,
+.nav-contacts .item + .item {
+  margin-left: 50px;
+}
+
+.site-nav .link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: block;
+}
+
+.nav-contacts {
+  display: flex;
+  margin-left: auto;
 }
 
 .site-nav .link,
