--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,11 @@ body {
 
 /* Site nav */
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .site-nav {
   display: flex;
   margin-left: 93px;
@@ -143,21 +148,27 @@ body {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
+  text-transform: uppercase;
+
+  margin-bottom: 30px;
   color: var(--white-color);
 }
 
 .hero-btn {
-  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-
   letter-spacing: 0.06em;
+
   color: var(--white-color);
   background-color: var(--acent-color);
-  cursor: pointer;
+
+  min-width: 200px;
+  padding: 10px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 1px solid transparent;
 }
 
 /* Feature */
