--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  outline: 1px solid tomato;
 }
 
 .cont-header,
@@ -89,6 +90,7 @@ body {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+  outline: 1px solid teal;
 }
 
 .site-nav {
@@ -172,11 +174,23 @@ body {
 }
 
 /* Feature */
+.feature-item {
+  display: flex;
+}
+
+.feature-list {
+  width: 270px;
+}
+
+.feature-list + .feature-list {
+  margin-left: 30px;
+}
 
 .feature-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  margin-bottom: 10px;
 }
 
 .feature-text {
