--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  outline: 1px solid red;
 }
 
 .cont-header,
@@ -302,6 +303,15 @@ body {
 
 /* Фильтра */
 
+.filter-item {
+  margin-left: 8px;
+  outline: 1px solid red;
+}
+
+.filter-item:first-child {
+  margin-left: 0px;
+}
+
 .filter-btn {
   font-family: inherit;
   font-style: normal;
@@ -309,9 +319,22 @@ body {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
+
   color: var(--main-color);
   background-color: #f5f4fa;
   cursor: pointer;
+  padding: 6px 22px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border: 1px solid transparent;
+}
+
+.filter-btn.active {
+  color: var(--white-color);
+  background-color: var(--acent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .filter-btn:hover {
@@ -320,6 +343,17 @@ body {
 }
 
 /* Контент */
+
+.content {
+  outline: 1px solid tomato;
+}
+
+.content-filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
 .content-title {
   font-weight: 700;
   font-size: 18px;
