--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@
   --acent-color: #2196f3;
   --white-color: #ffffff;
   --secondary-color-fon: #2f303a;
+
+  --indent-set-gup: 30px;
 }
 
 /* reset */
@@ -31,6 +33,11 @@ h6 {
 
 button {
   cursor: pointer;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 .list {
@@ -61,7 +68,6 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid red;
 }
 
 .cont-header,
@@ -303,9 +309,14 @@ body {
 
 /* Фильтра */
 
+.content-filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
 .filter-item {
   margin-left: 8px;
-  outline: 1px solid red;
 }
 
 .filter-item:first-child {
@@ -344,14 +355,30 @@ body {
 
 /* Контент */
 
-.content {
-  outline: 1px solid tomato;
+.content-item {
+  display: flex;
+
+  flex-wrap: wrap;
+  margin-left: calc(-1 * var(--indent-set-gup));
+  margin-bottom: calc(-1 * var(--indent-set-gup));
 }
 
-.content-filter {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+.content-list {
+  flex-basis: calc(100% / 3 - var(--indent-set-gup));
+  margin-left: var(--indent-set-gup);
+  margin-bottom: var(--indent-set-gup);
+}
+
+.content-list:nth-child(n + 7) {
+  margin-bottom: 0;
+}
+
+.content-card {
+  border: 1px solid #eeeeee;
+}
+
+.cont-description {
+  padding: 20px 24px;
 }
 
 .content-title {
@@ -361,6 +388,7 @@ body {
   letter-spacing: 0.06em;
 
   color: var(--main-color);
+  margin-bottom: 4px;
 }
 
 .content-text {
