--- a/css/styles.css
+++ b/css/styles.css
@@ -395,7 +395,7 @@ body {
   font-size: 16px;
   line-height: 1.87px;
   letter-spacing: 0.03em;
-  padding: 15px 0;
+  display: inline-block;
 
   color: var(--secondary-color);
 }
