--- a/css/styles.css
+++ b/css/styles.css
@@ -373,8 +373,10 @@ body {
   margin-bottom: 0;
 }
 
-.content-card {
-  border: 1px solid #eeeeee;
+.cont-description {
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
 }
 
 .cont-description {
