--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ button {
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 .list {
@@ -98,13 +99,18 @@ body {
   padding-bottom: 94px;
 }
 
+.section.hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+
 .site-nav {
   display: flex;
   margin-left: 93px;
 }
 
-.site-nav .item + .item,
-.nav-contacts .item + .item {
+.site-nav .item:nth-child(n + 2),
+.nav-contacts .item:nth-child(n + 2) {
   margin-left: 50px;
 }
 
@@ -181,15 +187,15 @@ body {
 /* Feature */
 .feature-item {
   display: flex;
-  margin-bottom: 94px;
 }
 
 .feature-list {
   width: 270px;
+  margin-left: 30px;
 }
 
-.feature-list + .feature-list {
-  margin-left: 30px;
+.feature-list:first-child {
+  margin-left: 0;
 }
 
 .feature-title {
@@ -207,12 +213,13 @@ body {
 
 /* WORK */
 
-.work-item + .work-item {
-  margin-left: 30px;
+.section.work {
+  padding-top: 0;
 }
 
-.work-img {
-  display: block;
+.comand-list:nth-child(n + 2),
+.work-item:nth-child(n + 2) {
+  margin-left: 30px;
 }
 
 /* Команда разработчиков */
@@ -226,10 +233,6 @@ body {
   background: #f5f4fa;
 }
 
-.comand-list + .comand-list {
-  margin-left: 30px;
-}
-
 .comand-list {
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -240,7 +243,6 @@ body {
 
 .cmd-img {
   display: block;
-  margin-bottom: 30px;
 }
 
 .work-title,
@@ -355,12 +357,15 @@ body {
 
 /* Контент */
 
+.section .container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .content-item {
   display: flex;
-
   flex-wrap: wrap;
-  margin-left: calc(-1 * var(--indent-set-gup));
-  margin-bottom: calc(-1 * var(--indent-set-gup));
+  justify-content: center;
 }
 
 .content-list {
@@ -369,17 +374,23 @@ body {
   margin-bottom: var(--indent-set-gup);
 }
 
-.content-list:nth-child(n + 7) {
+.content-list:nth-child(3n + 1) {
+  margin-left: 0;
+}
+
+.content-list:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+
+.content-card {
+  display: block;
+  text-decoration: none;
 }
 
 .cont-description {
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
-}
-
-.cont-description {
   padding: 20px 24px;
 }
 
@@ -397,7 +408,6 @@ body {
   font-size: 16px;
   line-height: 1.87px;
   letter-spacing: 0.03em;
-  display: inline-block;
 
   color: var(--secondary-color);
 }
